third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/structs_visibility/round-trip/test_enum_field_api.decompiled
//**** Cross-compiled for `move` syntax from `tests/no-v1-comparison/structs_visibility/test_enum_field_api.move`

//# publish
module 0x42::m2 {
}


//# publish
module 0x42::m {
    friend 0x42::m2;
    enum Data has drop {
        V1 {
            x: u64,
        }
        V2 {
            x: u64,
            y: bool,
        }
        V3,
    }
    enum Data2<T0, T1> has drop {
        V1 {
            x: T0,
        }
        V2 {
            y: u64,
            x: T1,
        }
        V3,
    }
    enum Data3<T0, T1> has drop {
        V1 {
            x: T0,
        }
        V2 {
            y: u64,
            x: T1,
        }
        V3 {
            x: T0,
        }
    }
    enum Data4<T0, T1> has drop {
        V1 {
            x: T0,
        }
        V2 {
            x: T1,
            y: u64,
        }
        V3,
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data_V1(p0: &Data): bool {
        p0 is V1
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data_V2(p0: &Data): bool {
        p0 is V2
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data_V3(p0: &Data): bool {
        p0 is V3
    }
    #[pack]
    friend fun pack_0x42_m_Data_V1(p0: u64): Data {
        Data::V1{x: p0}
    }
    #[pack]
    friend fun pack_0x42_m_Data_V2(p0: u64, p1: bool): Data {
        Data::V2{x: p0, y: p1}
    }
    #[pack]
    friend fun pack_0x42_m_Data_V3(): Data {
        Data::V3{}
    }
    #[unpack]
    friend fun unpack_0x42_m_Data_V1(p0: Data): u64 {
        let Data::V1{x: _v0} = p0;
        _v0
    }
    #[unpack]
    friend fun unpack_0x42_m_Data_V2(p0: Data): (u64, bool) {
        let Data::V2{x: _v0, y: _v1} = p0;
        (_v0, _v1)
    }
    #[unpack]
    friend fun unpack_0x42_m_Data_V3(p0: Data) {
        let Data::V3{} = p0;
    }
    #[borrow]
    friend fun borrow_0x42_m_Data_x_0(p0: &Data): &u64 {
        &p0.x
    }
    #[borrow]
    friend fun borrow_0x42_m_Data_y_1(p0: &Data): &bool {
        &p0.y
    }
    #[borrow_mut]
    friend fun borrow_mut_0x42_m_Data_x_0(p0: &mut Data): &mut u64 {
        &mut p0.x
    }
    #[borrow_mut]
    friend fun borrow_mut_0x42_m_Data_y_1(p0: &mut Data): &mut bool {
        &mut p0.y
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data2_V1<T0, T1>(p0: &Data2<T0, T1>): bool {
        p0 is V1
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data2_V2<T0, T1>(p0: &Data2<T0, T1>): bool {
        p0 is V2
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data2_V3<T0, T1>(p0: &Data2<T0, T1>): bool {
        p0 is V3
    }
    #[pack]
    friend fun pack_0x42_m_Data2_V1<T0, T1>(p0: T0): Data2<T0, T1> {
        Data2::V1<T0,T1>{x: p0}
    }
    #[pack]
    friend fun pack_0x42_m_Data2_V2<T0, T1>(p0: u64, p1: T1): Data2<T0, T1> {
        Data2::V2<T0,T1>{y: p0, x: p1}
    }
    #[pack]
    friend fun pack_0x42_m_Data2_V3<T0, T1>(): Data2<T0, T1> {
        Data2::V3<T0,T1>{}
    }
    #[unpack]
    friend fun unpack_0x42_m_Data2_V1<T0, T1>(p0: Data2<T0, T1>): T0 {
        let Data2::V1<T0,T1>{x: _v0} = p0;
        _v0
    }
    #[unpack]
    friend fun unpack_0x42_m_Data2_V2<T0, T1>(p0: Data2<T0, T1>): (u64, T1) {
        let Data2::V2<T0,T1>{y: _v0, x: _v1} = p0;
        (_v0, _v1)
    }
    #[unpack]
    friend fun unpack_0x42_m_Data2_V3<T0, T1>(p0: Data2<T0, T1>) {
        let Data2::V3<T0,T1>{} = p0;
    }
    #[borrow]
    friend fun borrow_0x42_m_Data2_x_0<T0, T1>(p0: &Data2<T0, T1>): &T0 {
        &p0.x
    }
    #[borrow]
    friend fun borrow_0x42_m_Data2_x_1<T0, T1>(p0: &Data2<T0, T1>): &T1 {
        &p0.x
    }
    #[borrow]
    friend fun borrow_0x42_m_Data2_y_0<T0, T1>(p0: &Data2<T0, T1>): &u64 {
        &p0.y
    }
    #[borrow_mut]
    friend fun borrow_mut_0x42_m_Data2_x_0<T0, T1>(p0: &mut Data2<T0, T1>): &mut T0 {
        &mut p0.x
    }
    #[borrow_mut]
    friend fun borrow_mut_0x42_m_Data2_x_1<T0, T1>(p0: &mut Data2<T0, T1>): &mut T1 {
        &mut p0.x
    }
    #[borrow_mut]
    friend fun borrow_mut_0x42_m_Data2_y_0<T0, T1>(p0: &mut Data2<T0, T1>): &mut u64 {
        &mut p0.y
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data3_V1<T0, T1>(p0: &Data3<T0, T1>): bool {
        p0 is V1
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data3_V2<T0, T1>(p0: &Data3<T0, T1>): bool {
        p0 is V2
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data3_V3<T0, T1>(p0: &Data3<T0, T1>): bool {
        p0 is V3
    }
    #[pack]
    friend fun pack_0x42_m_Data3_V1<T0, T1>(p0: T0): Data3<T0, T1> {
        Data3::V1<T0,T1>{x: p0}
    }
    #[pack]
    friend fun pack_0x42_m_Data3_V2<T0, T1>(p0: u64, p1: T1): Data3<T0, T1> {
        Data3::V2<T0,T1>{y: p0, x: p1}
    }
    #[pack]
    friend fun pack_0x42_m_Data3_V3<T0, T1>(p0: T0): Data3<T0, T1> {
        Data3::V3<T0,T1>{x: p0}
    }
    #[unpack]
    friend fun unpack_0x42_m_Data3_V1<T0, T1>(p0: Data3<T0, T1>): T0 {
        let Data3::V1<T0,T1>{x: _v0} = p0;
        _v0
    }
    #[unpack]
    friend fun unpack_0x42_m_Data3_V2<T0, T1>(p0: Data3<T0, T1>): (u64, T1) {
        let Data3::V2<T0,T1>{y: _v0, x: _v1} = p0;
        (_v0, _v1)
    }
    #[unpack]
    friend fun unpack_0x42_m_Data3_V3<T0, T1>(p0: Data3<T0, T1>): T0 {
        let Data3::V3<T0,T1>{x: _v0} = p0;
        _v0
    }
    #[borrow]
    friend fun borrow_0x42_m_Data3_x_0<T0, T1>(p0: &Data3<T0, T1>): &T0 {
        &p0.x
    }
    #[borrow]
    friend fun borrow_0x42_m_Data3_x_1<T0, T1>(p0: &Data3<T0, T1>): &T1 {
        &p0.x
    }
    #[borrow]
    friend fun borrow_0x42_m_Data3_y_0<T0, T1>(p0: &Data3<T0, T1>): &u64 {
        &p0.y
    }
    #[borrow_mut]
    friend fun borrow_mut_0x42_m_Data3_x_0<T0, T1>(p0: &mut Data3<T0, T1>): &mut T0 {
        &mut p0.x
    }
    #[borrow_mut]
    friend fun borrow_mut_0x42_m_Data3_x_1<T0, T1>(p0: &mut Data3<T0, T1>): &mut T1 {
        &mut p0.x
    }
    #[borrow_mut]
    friend fun borrow_mut_0x42_m_Data3_y_0<T0, T1>(p0: &mut Data3<T0, T1>): &mut u64 {
        &mut p0.y
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data4_V1<T0, T1>(p0: &Data4<T0, T1>): bool {
        p0 is V1
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data4_V2<T0, T1>(p0: &Data4<T0, T1>): bool {
        p0 is V2
    }
    #[test_variant]
    friend fun test_variant_0x42_m_Data4_V3<T0, T1>(p0: &Data4<T0, T1>): bool {
        p0 is V3
    }
    #[pack]
    friend fun pack_0x42_m_Data4_V1<T0, T1>(p0: T0): Data4<T0, T1> {
        Data4::V1<T0,T1>{x: p0}
    }
    #[pack]
    friend fun pack_0x42_m_Data4_V2<T0, T1>(p0: T1, p1: u64): Data4<T0, T1> {
        Data4::V2<T0,T1>{x: p0, y: p1}
    }
    #[pack]
    friend fun pack_0x42_m_Data4_V3<T0, T1>(): Data4<T0, T1> {
        Data4::V3<T0,T1>{}
    }
    #[unpack]
    friend fun unpack_0x42_m_Data4_V1<T0, T1>(p0: Data4<T0, T1>): T0 {
        let Data4::V1<T0,T1>{x: _v0} = p0;
        _v0
    }
    #[unpack]
    friend fun unpack_0x42_m_Data4_V2<T0, T1>(p0: Data4<T0, T1>): (T1, u64) {
        let Data4::V2<T0,T1>{x: _v0, y: _v1} = p0;
        (_v0, _v1)
    }
    #[unpack]
    friend fun unpack_0x42_m_Data4_V3<T0, T1>(p0: Data4<T0, T1>) {
        let Data4::V3<T0,T1>{} = p0;
    }
    #[borrow]
    friend fun borrow_0x42_m_Data4_y_1<T0, T1>(p0: &Data4<T0, T1>): &u64 {
        &p0.y
    }
    #[borrow]
    friend fun borrow_0x42_m_Data4_x_0_V1<T0, T1>(p0: &Data4<T0, T1>): &T0 {
        &p0.x
    }
    #[borrow]
    friend fun borrow_0x42_m_Data4_x_0_V2<T0, T1>(p0: &Data4<T0, T1>): &T1 {
        &p0.x
    }
    #[borrow_mut]
    friend fun borrow_mut_0x42_m_Data4_y_1<T0, T1>(p0: &mut Data4<T0, T1>): &mut u64 {
        &mut p0.y
    }
    #[borrow_mut]
    friend fun borrow_mut_0x42_m_Data4_x_0_V1<T0, T1>(p0: &mut Data4<T0, T1>): &mut T0 {
        &mut p0.x
    }
    #[borrow_mut]
    friend fun borrow_mut_0x42_m_Data4_x_0_V2<T0, T1>(p0: &mut Data4<T0, T1>): &mut T1 {
        &mut p0.x
    }
}


//# run 0x42::m2::test_v1

//# run 0x42::m2::test_v1_mut_borrow

//# run 0x42::m2::test_v2_mut_borrow

//# run 0x42::m2::test_data2_mut_borrow

//# run 0x42::m2::test_data3_mut_borrow

//# run 0x42::m2::test_data4_mut_borrow